fix: icon smaller

--- a/popup.css
+++ b/popup.css
@@ -17,8 +17,8 @@ header {
     text-shadow: 0px 0px 100px #1f4877;
 
     #icon {
-        height: 50%;
-        width: 50%;
+        height: 35%;
+        width: 35%;
     }
 }
 
